Fixed the dumb bit of schedule code that was causing a 'double row' of moth boss rocks to fly.

--- a/data/objects/enemies/bosses/moth_boss.cfg
+++ b/data/objects/enemies/bosses/moth_boss.cfg
@@ -206,7 +206,7 @@ properties: {
 	spawn_rock_projectiles: "[
 		map(
 			range(number_of_rock_waves),
-			schedule(value*100 - 100, [ 
+			schedule(dump(value*100), [ 
 				spawn('rock_flying_harmful',
 					rock_mid_x,
 					rock_mid_y - (64 * (1d3-1)),
@@ -829,19 +829,19 @@ object_type: [
 				
 				set(wind_stream_particles.particles, (
 					raw_particle_system_info + {
-						position: dump([
+						position: [
 							(_x_bound + _x2_bound)/2 - mid_x, //Horizontal offset of particle system as wide as the water, to handle when the emitter object isn't square within the bounds of the water.
 							(_y_bound + _y2_bound)/2 - mid_y, //
 							0
-						]),
+						],
 						emitter: (map <- raw_particle_system_info.emitter) + {
 							time_to_live: bubble_average_lifetime, //Make the bubbles live until the top of the water.
 							box_height: _y2_bound - _y_bound, //Make the bubbles as tall as the water. (To position the bubbles, see `position` above.)
 							box_width: _x2_bound - _x_bound, //Make the bubbles as wide as the water. (To position the bubbles, see `position` above.)
-							emission_rate: dump((map <- (map <- raw_particle_system_info.emitter).emission_rate) + {
+							emission_rate: (map <- (map <- raw_particle_system_info.emitter).emission_rate) + {
 								min: 0, //emission_scale_factor * 0.75, 
 								max: 0, //emission_scale_factor
-							})
+							}
 						},
 						affector: map((list <- raw_particle_system_info.affector),
 							if((map <- value).type = 'linear_force',
