Made the rocks spawn lower, as well as spawn more frequently.

--- a/data/objects/enemies/bosses/moth_boss.cfg
+++ b/data/objects/enemies/bosses/moth_boss.cfg
@@ -206,10 +206,10 @@ properties: {
 	spawn_rock_projectiles: "[
 		map(
 			range(number_of_rock_waves),
-			schedule(dump(value*100), [ 
+			schedule(dump(value*40), [ 
 				spawn('rock_flying_harmful',
 					rock_mid_x,
-					rock_mid_y - (64 * (1d3-1)),
+					rock_mid_y - (64 * (1d6-1)) + (64*2),
 				{
 					facing: rock_direction,
 					upside_down: if(1d2=2,-1,1),
@@ -219,7 +219,7 @@ properties: {
 				debug(rock_mid_x), debug(rock_mid_y),
 			])
 		)
-	 ]	where number_of_rock_waves = wind_gust_core_time/100,
+	 ]	where number_of_rock_waves = wind_gust_core_time/40,
 		where rock_mid_x = if(rock_direction > 0, scene_bounds.x, scene_bounds.x2),
 		where rock_mid_y = (flight_bounds.y2 + 164),
 
