Made the starting telegraph phase of the boss longer for more player warning.

--- a/data/objects/enemies/bosses/moth_boss.cfg
+++ b/data/objects/enemies/bosses/moth_boss.cfg
@@ -174,7 +174,7 @@ properties: {
 		set(wind_gust_current_obj.strength, 500),
 		_gust_fx_anchor.set_wind_direction(-wind_gust_direction),
 		_gust_fx_anchor.set_emission_rate(0.35),
-		schedule(wind_gust_lead_in_time, do_wind_gust_level_behavior_core),
+		schedule(wind_gust_lead_in_time * 2, do_wind_gust_level_behavior_core),
 	]",
 	
 	do_wind_gust_level_behavior_core: "commands :: [
