(BROKEN) some logic changes to Ralph's knife-throwing AI, causing him to never throw more than three times without taking another action.

--- a/data/objects/enemies/milgramen/kitty_sword.cfg
+++ b/data/objects/enemies/milgramen/kitty_sword.cfg
@@ -22,6 +22,7 @@ properties: {
 	flinch_threshold: 40,
 	hurt_velocity_x: 0,
 	hurt_velocity_y: 0,
+	consecutive_knives_thrown: 0,
 	
 	title: "~Ralph~",
 	description: "~A soldier eager to surpass the call of duty through sheer force of aggression.~",
@@ -43,7 +44,7 @@ properties: {
 	//jump_attack_anims: ['enter_prepare_jump', 'prepare_jump']
 	
 	player_too_close: "(lib.math.length(me,level.player) < 120)",
-	begin_spin_attack: "animation('enter_spin_attack')",
+	begin_spin_attack: "[set(consecutive_knives_thrown,0), animation('enter_spin_attack')]",
 
 
 	knife_offset: "def(decimal angle_offset) -> {x: decimal, y: decimal} {x: mid_x + offset[0], y: mid_y + offset[1]} where offset = orbit(0, 0, self.rotate - 90 + angle_offset, mid_y-10-y)",
@@ -51,9 +52,10 @@ properties: {
 	knife_vel: "def(decimal angle_offset) -> {x: decimal, y: decimal} {x: knife_speed * cos(angle_offset + self.rotate - 90), y: knife_speed * sin(angle_offset + self.rotate - 90)}",
 	spawn_individual_knife: "def(decimal angle_offset) -> commands spawn('${type}.throwing_knife', knife_offset(angle_offset).x, knife_offset(angle_offset).y, {rotate: angle_offset, velocity_x: knife_vel(angle_offset).x, velocity_y: knife_vel(angle_offset).y})",
 
-	fire_knives: "[sound('weapon-swing-lightest'+1d7+'.wav'), spawn_individual_knife(-90 * facing), spawn_individual_knife(-70 * facing), spawn_individual_knife(-50 * facing)]",
+	fire_knives: "[sound('weapon-swing-lightest'+1d7+'.wav'), spawn_individual_knife(-90 * facing), spawn_individual_knife(-70 * facing), spawn_individual_knife(-50 * facing), set(consecutive_knives_thrown,consecutive_knives_thrown+1)]",
 
 	is_player_at_a_good_knifethrow_position: "(
+		consecutive_knives_thrown < 3 and
 		(p_angle > 40) and
 		(p_angle < 95) and
 		(lib.math.length(me,level.player) > 300) and
@@ -111,8 +113,8 @@ on_end_walk_anim: "if((not facing_player),
   if(cycle > _can_attack_at and abs(level.player.mid_x - mid_x) < (300 + 1d200),
 
    if((1d4 = 1) or (abs(level.player.y - y) > 50),
-    [animation('enter_prepare_jump'),sound('cat-hiss.wav'),set(_began_energizing,cycle)],
-    if( (1d5 = 5) or is_player_at_a_good_knifethrow_position,
+    [animation('enter_prepare_jump'),sound('cat-hiss.wav'),set(_began_energizing,cycle),set(consecutive_knives_thrown,0)],
+    if( (1d5 = 5) or (is_player_at_a_good_knifethrow_position and consecutive_knives_thrown < 4),
 		[if(facing_player, set(facing, -facing)), animation('knife_toss')],
 		[animation('prepare_lunge'),sound('cat-hiss.wav'),set(_began_energizing,cycle)]
 	)
@@ -140,6 +142,7 @@ on_end_prepare_lunge_anim: "if(cycle - _began_energizing > energize_duration,
 								[
 									animation('lunge'),
 									sound('weapon-swing-medium'+1d7+'.wav'),
+									set(consecutive_knives_thrown,0),
 									set(_last_started_lunge_attack, level.cycle),
 								],
 								animation('prepare_lunge')
