Fixed syntax error with Ralph's knife-throwing logic.

--- a/data/objects/enemies/milgramen/kitty_sword.cfg
+++ b/data/objects/enemies/milgramen/kitty_sword.cfg
@@ -22,7 +22,7 @@ properties: {
 	flinch_threshold: 40,
 	hurt_velocity_x: 0,
 	hurt_velocity_y: 0,
-	consecutive_knives_thrown: 0,
+	consecutive_knives_thrown: {type:"int", init:"0"},
 	
 	title: "~Ralph~",
 	description: "~A soldier eager to surpass the call of duty through sheer force of aggression.~",
@@ -114,7 +114,7 @@ on_end_walk_anim: "if((not facing_player),
 
    if((1d4 = 1) or (abs(level.player.y - y) > 50),
     [animation('enter_prepare_jump'),sound('cat-hiss.wav'),set(_began_energizing,cycle),set(consecutive_knives_thrown,0)],
-    if( (1d5 = 5) or (is_player_at_a_good_knifethrow_position and consecutive_knives_thrown < 4),
+    if( (1d5 = 5 and consecutive_knives_thrown < 4) or (is_player_at_a_good_knifethrow_position and consecutive_knives_thrown < 4),
 		[if(facing_player, set(facing, -facing)), animation('knife_toss')],
 		[animation('prepare_lunge'),sound('cat-hiss.wav'),set(_began_energizing,cycle)]
 	)
