Redid how the moth boss sets its wind currents so that we can reliably change the wind speed between the lead-in and the actual core of the wind gust attack.

--- a/data/objects/enemies/bosses/moth_boss.cfg
+++ b/data/objects/enemies/bosses/moth_boss.cfg
@@ -147,31 +147,41 @@ properties: {
 	wind_gust_lead_in_time: "int :: 150",
 	wind_gust_core_time: "int :: 500",
 
-	wind_gust_current_obj: { type: "obj current_generator", init: "object('current_generator', mid_x, mid_y, {
-		facing:1,
-		invisible:true,
-		strength: 500,
-		current_vel_y:0,
-		always_active:true
-	})" },
 
-	setup_current_generator_object: "commands :: [
-		set(cob._x_bound, scene_bounds.x),
-		set(cob._x2_bound, scene_bounds.x2),
-		set(cob._y_bound, scene_bounds.y),
-		set(cob._y2_bound, scene_bounds.y2),
-		set(cob.current_vel_x,
-			if(mid_x > scene_bounds.x + (scene_bounds.x2 - scene_bounds.x)/2, -800, 800)
-		),
-	] where cob = wind_gust_current_obj",
+	create_weak_breeze: "set(current_generator, rect_current(
+			/* x y w h */
+		min(scene_bounds.x, scene_bounds.x2),
+		min(scene_bounds.y, scene_bounds.y2),
+		abs(scene_bounds.x - scene_bounds.x2),
+		abs(scene_bounds.y - scene_bounds.y2),
+			/* velocity x and y */
+		if(mid_x > scene_bounds.x + (scene_bounds.x2 - scene_bounds.x)/2, -800, 800),
+		0,
+			/* strength */
+		500
+	))",
+
+	create_strong_gale: "set(current_generator, rect_current(
+			/* x y w h */
+		min(scene_bounds.x, scene_bounds.x2),
+		min(scene_bounds.y, scene_bounds.y2),
+		abs(scene_bounds.x - scene_bounds.x2),
+		abs(scene_bounds.y - scene_bounds.y2),
+			/* velocity x and y */
+		if(mid_x > scene_bounds.x + (scene_bounds.x2 - scene_bounds.x)/2, -800, 800),
+		0,
+			/* strength */
+		5000
+	))",
+	
+	remove_wind: "set(current_generator, null)",
+
 	
 
 	do_wind_gust_level_behavior: "commands :: [
-		setup_current_generator_object,
-		add_object(wind_gust_current_obj),
 		sound_falloff('moth-boss-wind1.ogg',500,1.0),
 
-		set(wind_gust_current_obj.strength, 500),
+		create_weak_breeze,
 		_gust_fx_anchor.set_wind_direction(-wind_gust_direction),
 		_gust_fx_anchor.set_emission_rate(0.35),
 		schedule(wind_gust_lead_in_time * 2, do_wind_gust_level_behavior_core),
@@ -181,13 +191,13 @@ properties: {
 		spawn_wind_puffs,
 		spawn_rock_projectiles,
 		
-		set(wind_gust_current_obj.strength, 1000),
+		create_strong_gale,
 		_gust_fx_anchor.set_emission_rate(1.0),
 		schedule(wind_gust_core_time, do_wind_gust_level_behavior_leadout),
 	]",
 	
 	do_wind_gust_level_behavior_leadout: "commands :: [
-		set(wind_gust_current_obj.strength, 500),
+		create_weak_breeze,
 		_gust_fx_anchor.set_emission_rate(0.35),
 		
 		schedule(wind_gust_lead_in_time, bind_command(def() change_action) ),
@@ -195,7 +205,7 @@ properties: {
 	]",	
 
 	do_wind_gust_level_behavior_cleanup: "commands :: [
-		remove_object(wind_gust_current_obj),
+		remove_wind,
 		_gust_fx_anchor.set_emission_rate(0.0),
 
 		stop_sound('moth-boss-wind1.ogg'),
