--- a/data/objects/effects/puffs/rock_flying_harmful.cfg
+++ b/data/objects/effects/puffs/rock_flying_harmful.cfg
@@ -37,6 +37,7 @@ animation: [
 		rect: [0,0,31,31],
 		frames: 9,
 		duration: 7,
+		attack_area: "all",
 		palettes: "@include data/palettes.cfg:seaside_palettes + forest_palettes + cave_palettes",
 	},
 ],
