--- a/data/objects/enemies/bosses/moth_boss.cfg
+++ b/data/objects/enemies/bosses/moth_boss.cfg
@@ -142,9 +142,23 @@ properties: {
 		]
 	)",
 
-	do_wind_gust_body_behavior: "if(not animation in (['flapfast'] + uninterruptible_animations), animation('flapfast'))",
+	do_wind_gust_processing_behavior: "[
+		if(not animation in (['flapfast'] + uninterruptible_animations), animation('flapfast')),
+		if(
+			//if we're within the core time slice, during the heavy breeze
+			(_last_changed_action + wind_gust_lead_in_time < cycle)
+			and
+			(_last_changed_action + wind_gust_lead_in_time + wind_gust_core_time > cycle),
+			
+			if(level.player.is_standing,
+				create_strong_gale,
+				create_weakened_gale
+			)
+		)
+	]",
 
-	wind_gust_lead_in_time: "int :: 150",
+	wind_gust_lead_in_time: "int :: 240",
+	wind_gust_lead_out_time: "int :: 150",
 	wind_gust_core_time: "int :: 500",
 
 
@@ -168,11 +182,25 @@ properties: {
 		abs(scene_bounds.x - scene_bounds.x2),
 		abs(scene_bounds.y - scene_bounds.y2),
 			/* velocity x and y */
+		if(mid_x > scene_bounds.x + (scene_bounds.x2 - scene_bounds.x)/2, -1600, 1600),
+		0,
+			/* strength */
+		2500
+	))",
+	
+	create_weakened_gale: "set(current_generator, rect_current(
+			/* x y w h */
+		min(scene_bounds.x, scene_bounds.x2),
+		min(scene_bounds.y, scene_bounds.y2),
+		abs(scene_bounds.x - scene_bounds.x2),
+		abs(scene_bounds.y - scene_bounds.y2),
+			/* velocity x and y */
 		if(mid_x > scene_bounds.x + (scene_bounds.x2 - scene_bounds.x)/2, -800, 800),
 		0,
 			/* strength */
-		5000
+		200
 	))",
+
 	
 	remove_wind: "set(current_generator, null)",
 
@@ -184,7 +212,7 @@ properties: {
 		create_weak_breeze,
 		_gust_fx_anchor.set_wind_direction(-wind_gust_direction),
 		_gust_fx_anchor.set_emission_rate(0.35),
-		schedule(wind_gust_lead_in_time * 2, do_wind_gust_level_behavior_core),
+		schedule(wind_gust_lead_in_time, do_wind_gust_level_behavior_core),
 	]",
 	
 	do_wind_gust_level_behavior_core: "commands :: [
@@ -200,8 +228,8 @@ properties: {
 		create_weak_breeze,
 		_gust_fx_anchor.set_emission_rate(0.35),
 		
-		schedule(wind_gust_lead_in_time, bind_command(def() change_action) ),
-		schedule(wind_gust_lead_in_time, do_wind_gust_level_behavior_cleanup ),
+		schedule(wind_gust_lead_out_time, bind_command(def() change_action) ),
+		schedule(wind_gust_lead_out_time, do_wind_gust_level_behavior_cleanup ),
 	]",	
 
 	do_wind_gust_level_behavior_cleanup: "commands :: [
@@ -216,7 +244,7 @@ properties: {
 	spawn_rock_projectiles: "[
 		map(
 			range(number_of_rock_waves),
-			schedule(dump(value*40), [ 
+			schedule(value*40, [ 
 				spawn('rock_flying_harmful',
 					rock_mid_x,
 					rock_mid_y - (64 * (1d6-1)) + (64*2),
@@ -225,8 +253,6 @@ properties: {
 					upside_down: if(1d2=2,-1,1),
 					velocity_x: 850 * rock_direction,
 				}),
-				debug('spawning at'),
-				debug(rock_mid_x), debug(rock_mid_y),
 			])
 		)
 	 ]	where number_of_rock_waves = wind_gust_core_time/40,
@@ -277,13 +303,10 @@ properties: {
 
 
 #---- lay egg ----#
-	should_lay_egg: "can_lay_egg_at_current_pos and (size(filter(level.chars, value.type in ['moth_boss.egg','moth_small'])) < 5)",
+	should_lay_egg: "can_lay_egg_at_current_pos and (size(filter(level.chars, value.type in ['moth_boss.egg','moth_small'])) <= if(higher_difficulty, 6, 3))",
 	lay_egg: "[	
 		sound('moth-boss-lay-egg'+1d5+'.wav'), schedule(timeout/2, 
-			if(higher_difficulty,
-				[spawn_egg(-300), spawn_egg(0), spawn_egg(300)],
-				[spawn_egg(-200), spawn_egg(200)]
-			)
+			[spawn_egg(-300), spawn_egg(0), spawn_egg(300)],
 		),
 		schedule_next_action
 	] where spawn_egg = def(int vel_x) spawn('moth_boss.egg', mid_x, mid_y, {
@@ -376,7 +399,7 @@ on_process: "[
 			'moving',						seek_position,
 			'egg-laying',					null,
 			'moving_to_prep_windgust',		seek_position,
-			'windgust',						do_wind_gust_body_behavior,
+			'windgust',						do_wind_gust_processing_behavior,
 			'diving_towards_player',		seek_position,
 			'recover_from_dive',			seek_position,
 			null
