Enhancing the knockback mechanics for the flying rocks, and also wired in support for separate knockback cooldowns in hittable.

--- a/data/object_prototypes/base/hittable.cfg
+++ b/data/object_prototypes/base/hittable.cfg
@@ -32,6 +32,7 @@ properties: {
 
 #--------------------------  vars --------------------------#
 	time_last_hit: { type: "int", default: 0, persistent: false },
+	time_last_knockbacked: { type: "int", default: 0, persistent: false },
 	attributes: { type: "{string->string}", default: {}, persistent: false }, 
 	is_a_boss: { type: "bool", default: false, persistent: true },
 	_preexisting_object: { type: "bool", default: false },
@@ -62,6 +63,7 @@ properties: {
 	armor: "int :: 0",
 	posthit_invicibility_period: "int :: 0",
 	damage_cooldown: "int :: 0",
+	knockback_cooldown: "int :: 0",
 	sourceless_damage_cooldown: "int :: 20",
 
 	
@@ -162,7 +164,10 @@ properties: {
 									)
 								]
 							),
-							handle_knockback(collide_with)
+							if(collide_with.knockback_cooldown < (level.cycle - time_last_knockbacked), [
+								handle_knockback(collide_with),
+								set(time_last_knockbacked, level.cycle),
+							]),
 						])",
 						
 	get_hit_sourceless: "def(DamageType damage_type, int damage_amount) -> commands execute(me, 
