--- a/data/objects/effects/puffs/rock_flying_harmful.cfg
+++ b/data/objects/effects/puffs/rock_flying_harmful.cfg
@@ -12,8 +12,9 @@ properties: {
 	attack_damage_to_player: 3,
 	damage_type: "enum impact",
 	goes_through_enemy_shots: true,
-	damage_cooldown: "60",
+	damage_cooldown: "240",
 
+	attack_knockback: "int :: 400",
 
 
 
