Swapped frogatto's house graphic with one of the ones done in the new style.

--- a/data/level/Seaside/frogatto-grotto.cfg
+++ b/data/level/Seaside/frogatto-grotto.cfg
@@ -14,9 +14,9 @@
 				"_dest_door": "right_int_door",
 				"_dest_level": "frogatto-grotto-inside.cfg"
 			},
-			"type": "seaside_house_exterior_door_large",
-			"x": 1824,
-			"y": 376
+			"type": "seaside_house_exterior_door_house_3",
+			"x": 1874,
+			"y": 424
 		},
 		{
 			"_uuid": "33ab9057383944949e091476a2cde195",
@@ -27,9 +27,9 @@
 				"_dest_door": "left_int_door",
 				"_dest_level": "frogatto-grotto-inside.cfg"
 			},
-			"type": "seaside_house_exterior_door",
-			"x": 1504,
-			"y": 426
+			"type": "seaside_house_exterior_door_cliff_house_1",
+			"x": 1413,
+			"y": 440
 		},
 		{
 			"_uuid": "baf4ebf6cf5c402c9c64919c41bac2af",
@@ -158,17 +158,8 @@
 			"custom": true,
 			"label": "_596f2682",
 			"type": "smoke_generator",
-			"x": 1877,
-			"y": 60
-		},
-		{
-			"_uuid": "e66aa0f6e0504337918a8e99e70e903d",
-			"current_frame": "normal",
-			"custom": true,
-			"label": "_326daa58",
-			"type": "seaside_house_5",
-			"x": 1440,
-			"y": 48
+			"x": 1447,
+			"y": 133
 		},
 		{
 			"_uuid": "185bae8c9b284a60b0a42e026433f5dc",
@@ -187,8 +178,8 @@
 			"face_right": false,
 			"label": "_4bc57337",
 			"type": "rock_foreground_seaside1",
-			"x": 1807,
-			"y": 552,
+			"x": 1786,
+			"y": 576,
 			"zsub_order": 1
 		},
 		{
@@ -199,7 +190,7 @@
 			"label": "_36534dad",
 			"type": "rock_foreground_seaside3",
 			"x": 1909,
-			"y": 537
+			"y": 594
 		},
 		{
 			"_uuid": "82622126ecad4d5c97c9a2ec2058c4ad",
@@ -207,8 +198,8 @@
 			"custom": true,
 			"label": "_78a708a",
 			"type": "rock_foreground_seaside1",
-			"x": 1997,
-			"y": 538
+			"x": 2009,
+			"y": 566
 		},
 		{
 			"_uuid": "3360e4ce024444ef8294670d71a97e7b",
@@ -237,8 +228,8 @@
 			"face_right": false,
 			"label": "_350e1917",
 			"type": "fern_foreground1",
-			"x": 1632,
-			"y": 516,
+			"x": 1555,
+			"y": 462,
 			"zsub_order": 1
 		},
 		{
@@ -256,8 +247,8 @@
 			"custom": true,
 			"label": "_6d6b420a",
 			"type": "rock_foreground_seaside2",
-			"x": 1461,
-			"y": 516,
+			"x": 1475,
+			"y": 499,
 			"zsub_order": -1
 		},
 		{
@@ -267,8 +258,8 @@
 			"face_right": false,
 			"label": "_21f2aba2",
 			"type": "rock_foreground_seaside1",
-			"x": 1320,
-			"y": 553
+			"x": 1340,
+			"y": 508
 		},
 		{
 			"_uuid": "786ef0d5b0e24567928e1f7abb8a1582",
@@ -441,8 +432,8 @@
 			"custom": true,
 			"label": "_f7f5f07",
 			"type": "rock_background_cubic1",
-			"x": 1116,
-			"y": 105
+			"x": 1104,
+			"y": 47
 		},
 		{
 			"_uuid": "a4c36be9670a4066a4547a97b6cf99fb",
@@ -450,8 +441,8 @@
 			"custom": true,
 			"label": "_50688dca",
 			"type": "rock_background_cubic4",
-			"x": 1212,
-			"y": 9
+			"x": 1203,
+			"y": -85
 		},
 		{
 			"_uuid": "001dea125dac428ba8631dfcd0606d69",
@@ -459,8 +450,8 @@
 			"custom": true,
 			"label": "_5b9812e6",
 			"type": "rock_background_cubic3",
-			"x": 1329,
-			"y": 19
+			"x": 1304,
+			"y": -58
 		},
 		{
 			"_uuid": "7558ee273f4b4c8fa4ea0278cafbf77b",
@@ -709,25 +700,6 @@
 			"y": 288
 		},
 		{
-			"_uuid": "9275e64855884756af6f1d34dfb8184d",
-			"current_frame": "normal",
-			"custom": true,
-			"label": "_35987ed5",
-			"platform_area": [-165,0,-82,0],
-			"platform_offsets": [6,5,102],
-			"property_data": {
-				"footfall_sound_effect": "@eval enum wood_solid",
-				"heightmap": [
-					[1843,471],
-					[1926,470],
-					[2010,567]
-				]
-			},
-			"type": "heightmap_platform_controller",
-			"x": 2174,
-			"y": 465
-		},
-		{
 			"_uuid": "4ba635b3633d4c31a9af09329a74162f",
 			"current_frame": "normal",
 			"custom": true,
@@ -754,8 +726,8 @@
 			"label": "_67785f9e",
 			"type": "rock_foreground_seaside3",
 			"upside_down": true,
-			"x": 1237,
-			"y": -165,
+			"x": 1230,
+			"y": -203,
 			"zsub_order": 1
 		},
 		{
@@ -797,8 +769,8 @@
 			"label": "_7017436f",
 			"type": "rock_foreground_seaside1",
 			"upside_down": true,
-			"x": 1361,
-			"y": -208
+			"x": 1293,
+			"y": -268
 		},
 		{
 			"_uuid": "9b94b1fee8cf442ca9c87dbaa41b9648",
@@ -1126,6 +1098,43 @@
 			"type": "breakable_block_burnable",
 			"x": -320,
 			"y": 224
+		},
+		{
+			"_uuid": "0b622e691cb8409c8ff3ea7b4b2519f2",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_3b44fb3a",
+			"type": "seaside_house_3",
+			"x": 1352,
+			"y": -138
+		},
+		{
+			"_uuid": "d1a3d6b5c92f49e48dd6c6cbd06625b6",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_175723c7",
+			"type": "ground_extension_seaside3",
+			"x": 1860,
+			"y": 534
+		},
+		{
+			"_uuid": "009fe2bc49664b0a85bb4502c7559db9",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_6eb9dee3",
+			"type": "ground_extension_seaside2",
+			"x": 1971,
+			"y": 534
+		},
+		{
+			"_uuid": "76de82a3a90543588f2f683f8938b793",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_39327842",
+			"type": "ground_extension_seaside_bg3",
+			"x": 1962,
+			"y": 491
 		}
 	],
 	"dimensions": [-544,-512,3423,1121],
@@ -1139,6 +1148,25 @@
 	"segment_width": 0,
 	"serialized_objects": {
 		"character": [
+			{
+				"_uuid": "d75bdf96d1de4455886df7755e6f041f",
+				"activation_area": [814,551,1457,991],
+				"created": true,
+				"current_frame": "normal",
+				"custom": true,
+				"cycle": 211,
+				"label": "_1903e530",
+				"property_data": {
+					"_x2_bound": 1408,
+					"_x_bound": 864,
+					"_y2_bound": 992,
+					"_y_bound": 651
+				},
+				"time_in_frame": 211,
+				"type": "water_controller_ocean",
+				"x": 864,
+				"y": 672
+			},
 			{
 				"_uuid": "d2e8f7ebf3fc4385be4727f11c3687c8",
 				"activation_area": [2061,552,2767,978],
@@ -1176,40 +1204,11 @@
 				"type": "water_controller_ocean",
 				"x": 128,
 				"y": 640
-			},
-			{
-				"_uuid": "d75bdf96d1de4455886df7755e6f041f",
-				"activation_area": [814,551,1457,991],
-				"created": true,
-				"current_frame": "normal",
-				"custom": true,
-				"cycle": 211,
-				"label": "_1903e530",
-				"property_data": {
-					"_x2_bound": 1408,
-					"_x_bound": 864,
-					"_y2_bound": 992,
-					"_y_bound": 651
-				},
-				"time_in_frame": 211,
-				"type": "water_controller_ocean",
-				"x": 864,
-				"y": 672
 			}
 		]
 	},
 	"set_screen_resolution_on_entry": false,
 	"tile_map": [
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "background_parallax_objects"
-		},
 		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr
@@ -1223,7 +1222,7 @@
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,,,,,,,,,,,,,,,,,,,,,nbr
 ,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr
 ,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr
 nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,,nbr,nbr,nbr,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
@@ -1273,7 +1272,7 @@ nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nb
 			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
-			"zorder": "wooden_bridge_tile_rear_parts"
+			"zorder": "player"
 		},
 		{
 			"tiles": "",
@@ -1283,27 +1282,7 @@ nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nb
 			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
-			"zorder": "liquid_particle_effects"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "exterior_near_background"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "exterior_sand_background"
+			"zorder": "player"
 		},
 		{
 			"tiles": ",
@@ -1327,13 +1306,13 @@ nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nb
 ,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk
 ,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk
 ,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk
-,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk
-,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk
-,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk
-,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk
-,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk
-,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,,,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,nrk,nrk
-,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,,,,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,nrk,nrk,nrk,nrk,nrk,,,,,,nrk,nrk
+,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk
+,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk
+,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk
+,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk
+,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk
+,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,,,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk
+,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,,,,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,nrk,nrk,nrk,nrk,nrk
 ,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,,,,,,,,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,nrk,nrk,nrk,nrk,nrk
 ,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,,,,,,,,,,,,,,,,nrk,nrk,nrk,nrk,nrk
 ,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,,,,,,,,,,,,,,,,,,,nrk,nrk,nrk
@@ -1345,7 +1324,7 @@ nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nb
 ,,,,,,,,,,,nrk,nrk,nrk,nrk,nrk
 ,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk
 ,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk
-,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,,,,,,,,,,,,nrk,nrk,nrk,nrk,,,,,,,,,,,,,,,,,,,nrk,nrk,nrk,nrk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk
+,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,,,,,,,,,,,,nrk,nrk,nrk,nrk,,,,,,,,,,,,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk
 ,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,,,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,,,,,,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk
 ,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk
 ,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk
@@ -1456,36 +1435,6 @@ nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nb
 			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
-			"zorder": "foliage_background"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "wooden_platform_objects"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "exterior_decor"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
 			"zorder": "player"
 		},
 		{
@@ -1528,26 +1477,6 @@ nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nb
 			"y": 0,
 			"y_speed": 100,
 			"zorder": "foliage_foreground"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "foreground_parallax_objects"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "in_front_of_everything"
 		}
 	],
 	"title": "Frogatto Grotto",
