Moved the save statue's glow to a better zorder.

--- a/data/objects/props-interactive/misc/save_statue.cfg
+++ b/data/objects/props-interactive/misc/save_statue.cfg
@@ -96,7 +96,7 @@ properties: {
 			flicker_type: enum sputter,
 			graphics: enum firey,
 			scale_factor: 0.25,
-			zorder: 5000,
+			zorder:  int<-lib.json.get_document_map('data/zorder.cfg').near_player_foreground_effects,
 			variable_name: '_fire_glow',
 		})",
 		persistent: false,
