Numbers tweaks for the moth boss rocks.

--- a/data/objects/effects/puffs/rock_flying_harmful.cfg
+++ b/data/objects/effects/puffs/rock_flying_harmful.cfg
@@ -12,7 +12,8 @@ properties: {
 	attack_damage_to_player: 3,
 	damage_type: "enum impact",
 	goes_through_enemy_shots: true,
-	damage_cooldown: "240",
+	damage_cooldown: "60",
+	knockback_cooldown: "1000",
 
 	attack_knockback: "int :: 400",
 
