Changed footfall sound logic to default to dirt surfaces when no other material is found.

--- a/data/object_prototypes/base/cosmetic_effects.cfg
+++ b/data/object_prototypes/base/cosmetic_effects.cfg
@@ -517,7 +517,7 @@
 				{snd_key: enum stone,				sound: sound('footstep-'+run+'stone'+if(running,1d8,1d10)+'.wav')},
 				{snd_key: enum wood_plank,			sound: sound('footstep-'+run+'wood'+if(running,1d10,1d7)+'.wav',if(running,0.7,1.0))},
 				{snd_key: enum wood_solid,			sound: sound('footstep-'+run+'wood-solid'+if(running,1d7,1d8)+'.wav',0.6)},
-				{snd_key: enum default,				sound: sound('footstep'+1d4+'.wav')},
+				{snd_key: enum default,				sound: sound('footstep-'+run+'dirt'+if(running,1d9,1d10)+'.wav')},
 			] where run = if(animation in ['run'],'run-','') where running = (animation in ['run']) 
 		)",
 
