Replaced the other seaside background house with a new perspective-drawn design.  Made both background seaside houses use a little bit of 'atmospheric shading' by color-shifting them slightly in-engine.

--- a/data/objects/props/buildings/seaside/seaside_house_parallax_1.cfg
+++ b/data/objects/props/buildings/seaside/seaside_house_parallax_1.cfg
@@ -11,6 +11,13 @@ parallax_scale_y: 1100,
 editor_info: {
 	category: "buildings, seaside",
 },
+
+on_create: "[
+	set(brightness, 310),
+	set(red, 230),
+	set(green, 255),
+]",
+
 animation: {
 	id: "normal",
 	image: "props/buildings/seaside-house-parallax.png",
