--- a/data/objects/props/buildings/seaside/seaside_house_parallax_2.cfg
+++ b/data/objects/props/buildings/seaside/seaside_house_parallax_2.cfg
@@ -11,6 +11,13 @@ parallax_scale_y: 1100,
 editor_info: {
 	category: "buildings, seaside",
 },
+
+on_create: "[
+	set(brightness, 310),
+	set(red, 230),
+	set(green, 255),
+]",
+
 animation: {
 	id: "normal",
 	image: "props/buildings/seaside-house-parallax.png",
