Fixed a major bug where the save statues weren't re-attaching their particles after loading from a save, and where the legacy particle attache was then crashing because the particle system we were trying to adjust the spawn_rate on didn't exist.  Set up an assert to hopefully catch this and give some kind of better debug info than what we had before.

--- a/data/objects/effects/attaches/legacy_particle_attache.cfg
+++ b/data/objects/effects/attaches/legacy_particle_attache.cfg
@@ -58,7 +58,7 @@ properties: {
 								map(natural_spawn_rates, set(particle_systems[ value.name ].spawn_rate, value.rate)),
 								apply_customizations_for_individual_usage,
 								set(last_toggled_on, level.cycle),
-							])",
+							]) asserting size(particle_systems) > 0",
 
 	turn_off: "commands ::	execute(me, [
 								map(natural_spawn_rates, set(particle_systems[ value.name ].spawn_rate, 0)),
