--- a/data/objects/props-interactive/misc/save_statue.cfg
+++ b/data/objects/props-interactive/misc/save_statue.cfg
@@ -102,6 +102,19 @@ properties: {
 		persistent: false,
 	},
 	
+
+#-------------------------- constructors --------------------------#
+
+	/*
+		Do note that we have to do some really weird business in this object, because this is an obscenely "rare bird" that actually cares about the fact that loading from a save is different from just starting the game.  Very few objects are like that.
+		
+		For that reason, alone, we have an actual `on_load` call.
+	*/
+	hittable_obj_constructor: "[
+		add_object(_particles)
+		;
+		deactivate
+	]",
 	
 #-------------------------- vars --------------------------#
 	_x_bound: { type: "int", editor_info: { type: "x", value: "mid_x-50" } },
@@ -113,19 +126,44 @@ properties: {
 	_player_has_left_bounds: { type: "bool", default: false, persistent: false },  //be false so when we respawn, we don't immediately save.
 },
 
-//when the player spawns, find the nearest save statue, then visually activate it.  If it's nearby, we can assume we respawned from it after loading-from-a-save or dying
-on_load: "if(nearest_save_statue != null, if(player_is_near_statue(nearest_save_statue, 100), nearest_save_statue.visually_activate))
-			where nearest_save_statue = head( sort( filter(level.chars, value is obj save_statue),
-														lib.math.length(a,level.player) < lib.math.length(b,level.player)) )",
-
-on_create: "[
-				add_object(_particles)
+on_load: "	[
+				_constructor_guarded
+				
 				;
-				deactivate
+				
+				/*
+					When the player spawns, find the nearest save statue, then visually activate it.  If it's nearby, we can assume we respawned from it after loading-from-a-save or dying
+				*/
+				if(nearest_save_statue != null,
+					if(player_is_near_statue(nearest_save_statue, 100),
+					nearest_save_statue.visually_activate)
+				)
+				where nearest_save_statue =
+					head(
+						sort(
+							filter(level.chars,
+								value is obj save_statue),
+								lib.math.length(a,level.player) < lib.math.length(b,level.player)
+							)
+						)
 			]",
+
+
 on_process: "[
-				if(is_player_within_bounds and has_not_triggered_recently and _player_has_left_bounds, activate),
-				if( (not player_is_near_statue(me,200)) and (not is_player_within_bounds) and (not _player_has_left_bounds), set(_player_has_left_bounds, true))
+				if(
+					is_player_within_bounds and
+					has_not_triggered_recently and
+					_player_has_left_bounds,
+					
+					activate
+				),
+				if(
+					(not player_is_near_statue(me,200)) and
+					(not is_player_within_bounds) and
+					(not _player_has_left_bounds),
+					
+					set(_player_has_left_bounds, true)
+				)
 			]",
 
 animation: [
