--- a/data/objects/effects/attaches/legacy_particle_attache.cfg
+++ b/data/objects/effects/attaches/legacy_particle_attache.cfg
@@ -58,7 +58,7 @@ properties: {
 								map(natural_spawn_rates, set(particle_systems[ value.name ].spawn_rate, value.rate)),
 								apply_customizations_for_individual_usage,
 								set(last_toggled_on, level.cycle),
-							]) asserting size(particle_systems) > 0",
+							]) asserting size(particle_systems) > 0 | q(Looks like we had another instance of that bug where something tries to use a legacy particle attache without setting it up (critically, without spawning its particles).  The root object that spawned this is ${me.root_parent_object.type}.)",
 
 	turn_off: "commands ::	execute(me, [
 								map(natural_spawn_rates, set(particle_systems[ value.name ].spawn_rate, 0)),
