Added a couple of missing wooden-scaffolding decorations.

--- a/data/level/Seaside/bay-overlook.cfg
+++ b/data/level/Seaside/bay-overlook.cfg
@@ -1002,6 +1002,103 @@
 			"type": "frogatto_playable",
 			"x": -848,
 			"y": 418
+		},
+		{
+			"_uuid": "f19c42dc7bdf4131aca1e87976433634",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_1388b0a",
+			"type": "scaffolding_beams16",
+			"x": 973,
+			"y": -997
+		},
+		{
+			"_uuid": "d97769bf7600479088225ff8e3c63afb",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_5a30278b",
+			"type": "scaffolding_beams1",
+			"upside_down": true,
+			"x": 922,
+			"y": -1011
+		},
+		{
+			"_uuid": "882de5ba25c74b84b740a8de143c3f60",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_5124a11b",
+			"type": "scaffolding_beams3",
+			"x": 965,
+			"y": -1021
+		},
+		{
+			"_uuid": "8a9ae8e8f69041928782937eba16c5b8",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_4f98905e",
+			"type": "scaffolding_beams2",
+			"x": 1832,
+			"y": -1125
+		},
+		{
+			"_uuid": "8eed7fb9403e40de8bea955b0fdbb90b",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_4099764c",
+			"type": "scaffolding_beams18",
+			"x": 1780,
+			"y": -1166
+		},
+		{
+			"_uuid": "41db55eda4764476b86890034db75850",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_43338955",
+			"type": "scaffolding_beams19",
+			"x": 1846,
+			"y": -1141
+		},
+		{
+			"_uuid": "2c84ac7ded3f430aa633acbbb0cabec0",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_5c0799fb",
+			"type": "scaffolding_beams3",
+			"x": 1778,
+			"y": -1175
+		},
+		{
+			"_uuid": "06be3c5a012c4f748791487c6c8c4d3a",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_6509d72",
+			"type": "scaffolding_beams14",
+			"x": 1781,
+			"y": -1213
+		},
+		{
+			"_uuid": "2382bd3fe757449cbe091e7f5e3acd98",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_5454ae63",
+			"type": "scaffolding_platform4",
+			"x": 1818,
+			"y": -1007
+		},
+		{
+			"_uuid": "0795a8a6cdc8426cbe16ff3fe193bf0f",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_65dd3395",
+			"type": "scaffolding_platform1",
+			"x": 1882,
+			"y": -1043
 		}
 	],
 	"dimensions": [-3392,-1408,4639,2111],
